@@ -6,7 +6,10 @@
 	<instance id="example" ... >
 		...
 		<authentications>
-			<authentication module="sqlrelay" socket="/tmp/auth.socket" user="auth" password="auth"/>
+			<authentication module="sqlrelay" socket="/tmp/auth.socket"
+				user="auth" password="auth"
+				table="user" usercolumn="User" passwordcolumn="Password"
+				passwordfunction="password"/>
 		</authentications>
 		...
 	</instance>
